Authorization Filter added

--- a/HCS.StaffManagement/HCS.StaffManagement/Views/Login/Login.cshtml
+++ b/HCS.StaffManagement/HCS.StaffManagement/Views/Login/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model HCS.StaffManagement.Models.Login
+@{
     Layout = "";
 }
 
@@ -28,7 +29,7 @@
     <script src="~/Scripts/material-plugins/demo.js"></script>
 
     <!-- TagsInput Plugin -->
-    <script src="~/Scripts/material-plugins/jquery.tagsinput.js"></script>
+    @*<script src="~/Scripts/material-plugins/jquery.tagsinput.js"></script>*@
     <style>
         body {
             background-color: rgb(60, 72, 88);
@@ -42,12 +43,22 @@
     @*<form name="frmLogin" action="">*@
         <div class="content">
             <div class="container-fluid">
-                <div class="row">
+@using (Ajax.BeginForm(
+                                        new AjaxOptions
+                                        {
+                                            HttpMethod = "post",
+                                            Url = "/Api/WebApi/LoginApi",
+                                            InsertionMode = InsertionMode.Replace,
+                                            OnSuccess = "onAjaxRequestSuccess"
+
+                                        }))
+{
+                @*<div class="row">
                     <div class="col-md-12">
                         <h2 style="text-align:center; color:white">SAP SECURITY SERVICES</h2>
                     </div>
-                </div>
-                <br /><br />
+                </div>*@
+                @*<br /><br />*@
                 <div class="row">
                     <div class="col-md-2"></div>
                     <div class="col-md-4">
@@ -64,7 +75,8 @@
                                         <div class="col-md-9">
                                             <div class="form-group label-floating is-empty">
                                                 <label class="control-label"></label>
-                                                <input type="email" id="txtEmail" class="form-control">
+                                                @Html.TextBoxFor(Model => Model.EmailID, new { @class = "form-control"})
+                                                @*<input type="email" id="txtEmail" class="form-control">*@
                                             </div>
                                         </div>
                                     </div>
@@ -106,8 +118,22 @@
                         </div>
                     </div>
                 </div>
+}
             </div>
         </div>
+    <footer class="footer">
+            <div class="container">
+                <p class="copyright pull-right">
+                    ©
+                    <script>
+                        document.write(new Date().getFullYear())
+                    </script>
+                    <a href="http://www.hcsinfosolutions.com">HCS Info Solutions</a>
+                </p>
+            </div>
+        </footer>
+
+
     @*</form>*@
 </body>
 </html>
