--- a/HCS.StaffManagement/HCS.StaffManagement/Views/Shared/_AdminDashBoard.cshtml
+++ b/HCS.StaffManagement/HCS.StaffManagement/Views/Shared/_AdminDashBoard.cshtml
@@ -32,9 +32,9 @@
                 </div>
                 </div>
             </div>
-        <div class="container">
+        @*<div class="container">
             <hr />
-        </div>
+        </div>*@
           <div class="container-fluid">
               @RenderBody()
             </div>
